--- a/p/diary/mothers-day/2014-05-11.md
+++ b/p/diary/mothers-day/2014-05-11.md
@@ -30,3 +30,10 @@
 
 ![lift](lift.png)
 &nbsp;&nbsp;![sun](sun.png)
+
+> 《岁暮到家》<br>
+  -- 蒋士铨<br>
+  爱子心无尽， 归家喜及辰。<br>
+  寒衣针线密， 家信墨痕新。<br>
+  见面怜清瘦， 呼儿问苦辛。<br>
+  低徊愧人子， 不敢叹风尘。
