shorten url; `您` instead

--- a/p/diary/mothers-day/2014.md
+++ b/p/diary/mothers-day/2014.md
@@ -26,14 +26,14 @@
 
 21年了（还没算上肚子里的时候）
 
-你辛苦了！永远爱你。 ^.^
+您辛苦了！永远爱你。 ^.^
 
 ![lift](lift.png)
 &nbsp;&nbsp;![sun](sun.png)
 
 > 《岁暮到家》<br>
-  -- 蒋士铨<br>
-  爱子心无尽， 归家喜及辰。<br>
-  寒衣针线密， 家信墨痕新。<br>
-  见面怜清瘦， 呼儿问苦辛。<br>
-  低徊愧人子， 不敢叹风尘。
+-- 蒋士铨<br>
+爱子心无尽， 归家喜及辰。<br>
+寒衣针线密， 家信墨痕新。<br>
+见面怜清瘦， 呼儿问苦辛。<br>
+低徊愧人子， 不敢叹风尘。
