--- a/p/diary/mothers-day/2014.md
+++ b/p/diary/mothers-day/2014.md
@@ -31,9 +31,8 @@
 ![lift](lift.png)
 &nbsp;&nbsp;![sun](sun.png)
 
-> 《岁暮到家》<br>
--- 蒋士铨<br>
-爱子心无尽， 归家喜及辰。<br>
-寒衣针线密， 家信墨痕新。<br>
-见面怜清瘦， 呼儿问苦辛。<br>
-低徊愧人子， 不敢叹风尘。
+<img alt="1" src="1.jpg" width="240">
+&nbsp;&nbsp;
+<img alt="3" src="3.jpg" width="240">
+
+<img alt="4" src="4.jpg" width="500">
