--- a/p/diary/mothers-day/2014.md
+++ b/p/diary/mothers-day/2014.md
@@ -28,11 +28,11 @@
 
 您辛苦了！永远爱你。 ^.^
 
-![lift](lift.png)
-&nbsp;&nbsp;![sun](sun.png)
+<img src="lift.png" width="120">
+<img src="sun.png" width="120">
 
-<img alt="1" src="1.jpg" width="240">
+<img src="1.jpg" width="240">
 &nbsp;&nbsp;
-<img alt="3" src="3.jpg" width="240">
+<img src="3.jpg" width="240">
 
-<img alt="4" src="4.jpg" width="500">
+<img src="4.jpg" width="500">
