更新了一下aboutme

--- a/p/weekly/150828.md
+++ b/p/weekly/150828.md
@@ -39,15 +39,15 @@ Error: E:\test\node_modules\sqlite3\build\deps\action_before_build.vcxproj(3,14)
 解决: [using MSBuild with VS2010-generated vcxproj file as target — error MSB4066 (“attribute Label in element is unrecognized”)](http://stackoverflow.com/questions/5107757/using-msbuild-with-vs2010-generated-vcxproj-file-as-target-error-msb4066-at)
 
 ```plain
-Error: The imported project "C:\Program Files (x86)\MSBuild\Microsoft.Cpp\v4.0\V110\Microsoft.Cpp.Default.props" was not found.
+Error: The imported project "C:\Program Files (x86)\MSBuild\Microsoft.Cpp\v4.0\V110\Microsoft.Cpp.Default.props" was not found.  
 Confirm that the path in the declaration is correct, and that the file exists on disk.
 ```
 
 解决: [Error: The imported project “C:\Program Files (x86)\MSBuild\Microsoft.Cpp\v4.0\V110\Microsoft.Cpp.Default.props” was not found](http://stackoverflow.com/questions/22229548/error-the-imported-project-c-program-files-x86-msbuild-microsoft-cpp-v4-0-v)
 
 ```plain
-Error: E:\test\node_modules\sqlite3\node_modules\nan\nan.h(263): error C2995: “v8::Local<T> _NanEnsureLocal(v8::Local<T>)”: 函数模板已经定义 (..\src\database.cc) [E:\test\no
-de_modules\sqlite3\build\node_sqlite3.vcxproj]
+Error: E:\test\node_modules\sqlite3\node_modules\nan\nan.h(263): error C2995: “v8::Local<T> _NanEnsureLocal(v8::Local<T>)”:  
+函数模板已经定义 (..\src\database.cc) [E:\test\node_modules\sqlite3\build\node_sqlite3.vcxproj]
 ```
 
 回到[atom/electron#1182 (comment)](https://github.com/atom/electron/issues/1182#issuecomment-135619912) 发问 得到electron作者@zcbenz提示  
@@ -81,7 +81,6 @@ windows只能spawn系统识别的文件格式 如exe/bat/cmd
 兼容windows的完整代码 [fritx/gulp-app](https://github.com/fritx/gulp-app/blob/dev/app%2Fget-gulp-path.js)
 
 ```js
-var resolveFrom = require('resolve-from');
 try {
   gulpPath = resolveFrom(pth, 'gulp/bin/gulp');
 } catch(err) {}
