--- a/p/weekly/151016.md
+++ b/p/weekly/151016.md
@@ -7,9 +7,11 @@
 [1016] nw弹窗 show/hide 去动画 位置hack  
 因为windows使用了enterFullScreen() 无法应用于多屏幕  
 将其去掉后 可以resize 需要补充setResizable(false)  
-并且show/hide自带的动画就出现了 加timeout也还是要显示  
+并且show/hide自带的动画就出现了 加timeout也还是要显示
+
 自己hack了一下 就是show/hide前 先moveTo(-32000, -32000) 然后show  
-timeout 200ms左右 再moveTo(0, 0) 即可实现无动画show hide反之
+timeout 200ms左右 再moveTo(0, 0) 即可实现无动画show hide反之  
+-32000出自一次修复窗口抖动 发现窗口弹出动画期间 x,y=-32000,-32000
 
 ```js
 guiwin.moveTo(-32000, -32000) // 位置hack
