--- a/p/weekly/160227.md
+++ b/p/weekly/160227.md
@@ -33,7 +33,7 @@ nixe提交 [fritx/nixe: fcd98bb](https://github.com/fritx/nixe/commit/fcd98bb8d0
 
 ---
 
-[0222] yaml特殊字符转移初试探
+[0222] yaml特殊字符转义初试探
 
 http://stackoverflow.com/questions/3790454/in-yaml-how-do-i-break-a-string-over-multiple-lines
 
@@ -59,7 +59,7 @@ http://stackoverflow.com/questions/3790454/in-yaml-how-do-i-break-a-string-over-
 [0218] SublimeText3-3083升级到3103后  
 JS语法高亮有些变爽了 有些却遭到破坏 (尤其是React  
 
-https://github.com/jamiewilson/predawn/issues/122
+https://github.com/jamiewilson/predawn/issues/122  
 https://forum.sublimetext.com/t/javascript-syntax-highlighting-changes-in-3103/17328/18
 
 未找到科学的办法 唯有下载3083降级覆盖 将下载链接中3103替换为3083即可
