* 换一个花样装逼 代码高亮

--- a/p/weekly/160604.md
+++ b/p/weekly/160604.md
@@ -35,7 +35,7 @@ app.use(function *(next) {
 
 [0602] 可选但隐藏&显示但不可选 css技巧
 
-```sass
+```scss
 body { -webkit-user-select: none; } // 默认一切不可选中
 [data-after] { content: attr(data-after); } // 显示但不可选
 
@@ -91,7 +91,7 @@ body { -webkit-user-select: none; } // 默认一切不可选中
 [0531] Vue动态调用filter  
 https://forum.vuejs.org/topic/574/how-to-pass-dynamic-filter/2
 
-```vue
+```html
 <td v-for="f in fields">
   {{item | seek f.key | applyFilter f.filter}}
 </td>
