--- a/p/weekly/161015.md
+++ b/p/weekly/161015.md
@@ -23,7 +23,7 @@ display: -webkit-box;
 
 ---
 
-[1012] shell 批量重命名 user_* => base_*
+[1012] shell 批量重命名 user\_\* => base\_\*
 
 ```shell
 for f in user_*; do mv "$f" "$(echo $f | sed -e 's/user_/base_/')"; done
@@ -127,8 +127,8 @@ exec('npm install sqlite3 --build-from-source --sqlite_libname=sqlcipher --sqlit
 
 ---
 
-[0920] mac打包*.pkg相关命令  
-*.app和*.dmg长期都没问题，最近研究了*.pkg的  
+[0920] mac打包\*.pkg相关命令  
+\*.app和\*.dmg长期都没问题，最近研究了\*.pkg的  
 pkg比较少见，但我们项目用于执行postinstall等脚本  
 https://developer.apple.com/legacy/library/documentation/Darwin/Reference/ManPages/man1/pkgbuild.1.html  
 https://developer.apple.com/legacy/library/documentation/Darwin/Reference/ManPages/man1/productbuild.1.html#//apple_ref/doc/man/1/productbuild
