post(weekly): 0528 补发

--- a/p/weekly/170319.md
+++ b/p/weekly/170319.md
@@ -71,7 +71,7 @@ http://7567567.blog.51cto.com/706378/641744
 +<U+FEFF>{
 -  "version": "3.4.5b",
 +  "version": "3.4.5c",
-}
+ }
 ```
 
 ---
@@ -94,7 +94,7 @@ if(global['gc']) {
 [0216] Vue slot跨组件传递  
 必须要slot[name]外套一层 template[slot]+(v-if)
 
-```vue
+```html
 <!-- 跨组件 接收slot -->
 <template>
   <div class="my-component">
@@ -119,7 +119,7 @@ if(global['gc']) {
 更新: https://forum-archive.vuejs.org/topic/4840/keep-canreuse-in-vue-router-2-0  
 移除 route.canReuse
 
-```vue
+```html
 <router-view :key="$route.path"></router-view>
 ```
 ---
@@ -152,7 +152,7 @@ methods: {
 
 补发 [0109] vue-component中的style 并不会自动清理 需要确保不污染全局
 
-```vue
+```html
 <style lang="scss">
 // 如果使用scoped 某些其他组件元素无法生效
 // 不使用scoped vue并不会自动清理 只能括起来以保证不污染全局
@@ -163,4 +163,6 @@ methods: {
   .el-input {
     width: 50%;
   }
+}
+</style>
 ```
