--- a/p/weekly/170430.md
+++ b/p/weekly/170430.md
@@ -159,6 +159,26 @@ clipboard.set([
 
 ---
 
+[0405] 批量导出/导入mongodb各collection数据  
+http://stackoverflow.com/questions/11255630/how-to-export-all-collection-in-mongodb
+
+```sh
+# export
+export db=gtfo
+export dir=./mongo-data
+mongo --quiet $db --eval "db.getCollectionNames().join('\n')" | \
+  grep -v system.indexes | \
+  xargs -L 1 -I {} mongoexport -d $db -c {} --out $dir/{}.json
+
+# import
+export db=gtfo_test_import123
+export dir=./mongo-data
+ls $dir | sed s/.json$// | \
+  xargs -L 1 -I {} mongoimport -d $db -c {} --file $dir/{}.json --upsert
+```
+
+---
+
 [0324] 修复node-notifier 图标始终为terminal  
 https://github.com/mikaelbr/node-notifier/issues/71#issuecomment-288992882
 
