--- a/p/weekly/160430.md
+++ b/p/weekly/160430.md
@@ -37,9 +37,9 @@ https://github.com/fritx/cross-unzip
 
 ```plain
 # electron .
-/Users***REMOVED******REMOVED***auto/app/node_modules/.bin:
-/usr/local/lib/node_modules/npm/bin/node-gyp-bin:/Users***REMOVED******REMOVED***auto/node_modules/.bin:/usr/local/bin:
-/usr/bin:/bin:/usr/sbin:/sbin:/Users***REMOVED***/.nwjs/0.12.3
+/Users/djj/jt-auto/app/node_modules/.bin:
+/usr/local/lib/node_modules/npm/bin/node-gyp-bin:/Users/djj/jt-auto/node_modules/.bin:/usr/local/bin:
+/usr/bin:/bin:/usr/sbin:/sbin:/Users/djj/.nwjs/0.12.3
 
 # GT_Auto.app
 /usr/bin:/bin:/usr/sbin:/sbin
