--- a/p/weekly/161015.md
+++ b/p/weekly/161015.md
@@ -113,7 +113,7 @@ exec('npm install sqlite3 --build-from-source --sqlite_libname=sqlcipher --sqlit
 ---
 
 [0927] 复制/粘贴/发送 图片/文件 交互  
-目前操作的交互有点复杂，其中柔和了GT原有的“展示GIF不超过3MB”、企业qq的“从桌面拖动文件相关交互”以及磊哥后来提的需求“20MB以上当文件发送”。  
+目前操作的交互有点复杂，其中柔和了JT原有的“展示GIF不超过3MB”、企业qq的“从桌面拖动文件相关交互”以及磊哥后来提的需求“20MB以上当文件发送”。  
 “图片体积大”的定义：大于3MB的GIF图，或大于20MB的其他图片格式。
 
 | 操作 | 效果 |
@@ -134,8 +134,8 @@ https://developer.apple.com/legacy/library/documentation/Darwin/Reference/ManPag
 https://developer.apple.com/legacy/library/documentation/Darwin/Reference/ManPages/man1/productbuild.1.html#//apple_ref/doc/man/1/productbuild
 
 ```js
-"mac-pkg-pre": "chmod +x ../GT_mac/scripts/* && cp -r ..***REMOVED***-app/Genius/osx64 ../GT_mac",
-"mac-pkg-build": "pkgbuild --identifier com.dji.gt.Genius.pkg --scripts ../GT_mac/scripts --component ../GT_mac/osx64/***REMOVED*** --install-location /Applications ..***REMOVED***-app/Genius.pkg",
+"mac-pkg-pre": "chmod +x ../JT_mac/scripts/* && cp -r ../rejt-app/Jesus/osx64 ../JT_mac",
+"mac-pkg-build": "pkgbuild --identifier com.djj.jt.Jesus.pkg --scripts ../JT_mac/scripts --component ../JT_mac/osx64/Jesus.app --install-location /Applications ../rejt-app/Jesus.pkg",
 "mac-pkg": "npm run mac-pkg-pre && npm run mac-pkg-build",
 "mac": "npm run mac-app && npm run mac-dmg && npm run mac-pkg"
 ```
