--- a/p/weekly/161029.md
+++ b/p/weekly/161029.md
@@ -71,7 +71,7 @@ Controller.prototype.lookUp = function(e) {
 ```sh
 # scripts/postinstall
 # touch "${TMPDIR}/.keep"  # <-- 这句也无济于事
-open '/Applications/***REMOVED***'
+open '/Applications/Jesus.app'
 ```
 
 ```js
