--- a/p/weekly/161127.md
+++ b/p/weekly/161127.md
@@ -15,7 +15,7 @@ nw.build()
 .then(() => {
   // mac
   ;['en', 'zh_CN', 'zh_TW'].forEach(k => {
-    const d = `..***REMOVED***-app/Genius/osx64/***REMOVED***/Contents/Resources/${k}.lproj`
+    const d = `../rejt-app/Jesus/osx64/Jesus.app/Contents/Resources/${k}.lproj`
     fs.outputFileSync(d, '')
   })
 })
