--- a/p/weekly/170430.md
+++ b/p/weekly/170430.md
@@ -7,7 +7,7 @@
 [0425] node-dev 报错 Error: watch xxx ENFILE
 
 ```plain
-Error: watch /Users***REMOVED******REMOVED***/node_modules/request/lib/cookies.js ENFILE
+Error: watch /Users/djj/jtfo/node_modules/request/lib/cookies.js ENFILE
 ```
 
 ```plain
@@ -164,14 +164,14 @@ http://stackoverflow.com/questions/11255630/how-to-export-all-collection-in-mong
 
 ```sh
 # export
-export db=gtfo
+export db=jtfo
 export dir=./mongo-data
 mongo --quiet $db --eval "db.getCollectionNames().join('\n')" | \
   grep -v system.indexes | \
   xargs -L 1 -I {} mongoexport -d $db -c {} --out $dir/{}.json
 
 # import
-export db=gtfo_test_import123
+export db=jtfo_test_import123
 export dir=./mongo-data
 ls $dir | sed s/.json$// | \
   xargs -L 1 -I {} mongoimport -d $db -c {} --file $dir/{}.json --upsert
@@ -195,8 +195,8 @@ Another quick solution here (inspired by @mbushpilot2b):
     ```plain
     cd node_modules/node-notifier/vendor
     cd terminal-notifier.app/Contents
-    sed -i -- 's/terminal-notifier/genius-notifier/g' Info.plist  # replace identifiers
-    sed -i -- 's/Terminal/Genius/g' Info.plist  # replace icon
+    sed -i -- 's/terminal-notifier/jesus-notifier/g' Info.plist  # replace identifiers
+    sed -i -- 's/Terminal/jesus/g' Info.plist  # replace icon
     rm Resources/Terminal.icns  # remove the original icon
-    cp my/resource/Genius.icns Resources/Genius.icns  # replaced by our own icon
+    cp my/resource/jesus.icns Resources/jesus.icns  # replaced by our own icon
     ```
