--- a/p/weekly/170625.md
+++ b/p/weekly/170625.md
@@ -232,7 +232,7 @@ get: function() {
 
 [0614] 修复iOS 局部滚动 易触发页面整体滚动
 
-```vue
+```html
 <template>
   <div ref="appCont">
     <ul ref="scrollCont"></ul>
@@ -332,7 +332,7 @@ meta format-detection date=no 无效果<br>
 改向text中添加0宽度特殊字符<br>
 https://stackoverflow.com/questions/8249770/how-can-i-disable-meta-format-detection-on-ios-for-dates
 
-```vue
+```html
 <span>{{ avoidDetection(tab.name) }}</span>
 ```
 
