--- a/p/weekly/220225.md
+++ b/p/weekly/220225.md
@@ -264,8 +264,7 @@ $ mail  # 列出
 [0121] 一些手写实现Promise/A+规范的例子 通过promises-aplus-tests测试<br>
 \- 从零开始手写Promise https://zhuanlan.zhihu.com/p/144058361<br>
 \- 手写 Promise 所有方法实现 https://www.jianshu.com/p/5119e01a036f<br>
-\- 纯手写Promise，由浅入深 https://segmentfault.com/a/1190000020505870
-https://github.com/then/promise
+\- 纯手写Promise，由浅入深 https://segmentfault.com/a/1190000020505870 、https://github.com/then/promise
 
 \- https://github.com/promises-aplus/promises-tests<br>
 \- https://github.com/wslx520/Promise/blob/master/Promise.ts<br>
