--- a/p/weekly/220530.md
+++ b/p/weekly/220530.md
@@ -92,6 +92,72 @@ https://rgbacolorpicker.com/hex-to-rgba<br>
 
 ---
 
+[0507] 修复时区问题 前后端统一北京时间<br>
+https://github.com/fritx/fritxweapp3/commit/5a8b69ede8dc389bae005666df0318617aeab196
+
+```diff
+ // 小程序前端
++// 修复时区问题 矫正时区 统一中国北京时间
++let tzOfs = 60 * 8
++let fixTimezone = momentObj => momentObj.clone().utcOffset(tzOfs)
++let reminderPushDeadlineHour = 7 // 实际为730-800AM 这里暂定7
++
+ let showFieldNotification = selectedId => {
+-  let isAfterToday = moment(selectedId).isAfter(moment().endOf('d'))
++  let now = fixTimezone(moment())
++  let isToday = selectedId === getCalendarValue(now)
++  let isAfterToday = isToday ? now.hour() < reminderPushDeadlineHour
++    : moment(selectedId).isAfter(now.clone().endOf('d'))
+   return isAfterToday
+ }
+```
+
+```diff
+ // 云函数后端
++// 修复时区问题 矫正时区 统一中国北京时间
++let tzOfs = 60 * 8
++let fixTimezone = momentObj => momentObj.clone().utcOffset(tzOfs)
++
+ exports.main = async () => {
+   try {
+-    let now = moment()
++    let now = fixTimezone(moment())
+     let dateId = now.format(fmtDateId)
+     // ...
++    let query = { dateId, sent: 0 }
+     while (true) {
+       // 查询list数量 无则跳出循环
+-      let { data: list } = await db.collection(tb).where({ dateId, sent: 0 }).get()
++      let { data: list } = await db.collection(tb).where(query).get()
+       if (list.length <= 0) break
+       // 并行发送消息
+       let promises = list.map(async item => {
+         // ...
+         const result = await cloud.openapi.subscribeMessage.send({
+           page: '/page/xxxxxxx/xxxxxxx', // todo ?selectedId=xxxxx
+           touser: _openid,
+           lang,
+           templateId,
+           "data": {
+             "thing1": { "value": title },
+             "time2": { "value": dateId },
+             "thing5": {
+-              "value": Math.max(0, moment(dateId).diff(Date.now(), 'd')) + '天'
++              "value": Math.max(0, fixTimezone(moment(dateId)).diff(Date.now(), 'd')) + '天'
+             },
+           }
+         })
+         // ...
+         return { errCode, errMsg }
+       })
+       // ...
+     }
+     // ...
+ }
+```
+
+---
+
 [0501] 使用Docker安装Oracle步骤<br>
 https://blog.csdn.net/weixin_42322206/article/details/122998716
 似乎运行ok
