--- a/p/weekly/220530.md
+++ b/p/weekly/220530.md
@@ -160,9 +160,12 @@ https://github.com/fritx/fritxweapp3/commit/5a8b69ede8dc389bae005666df0318617aea
 
 [0501] 使用Docker安装Oracle步骤<br>
 https://blog.csdn.net/weixin_42322206/article/details/122998716
-似乎运行ok
-docker volume create oracle-db<br>
+
+```sh
+# 似乎运行ok
+docker volume create oracle-db
 docker run -d --name oracle-db -p 1521:1521 -p 8080:8080 --shm-size=1g --restart=always -e ORACLE_PWD=XXX -v oracle-db:/u01/app/oracle/oradata zerda/oracle-database:11.2.0.2-xe
+```
 
 [0501] 小程序坑 wx:for列表中第1个slideview按钮无法滑出<br>
 原因是wx:key使用id包含0则无法滑出
