--- a/p/weekly/220821.md
+++ b/p/weekly/220821.md
@@ -7,7 +7,7 @@
 https://blog.csdn.net/qq_37968920/article/details/82262768<br>
 https://www.cxymm.net/article/qq_37968920/82262768
 
-解法：参考了 https://github.com/uojo/wx-qqface/blob/master/src/charMap.js
+解法：参考了 https://github.com/uojo/wx-qqface/blob/master/src/charMap.js<br>
 经处理已升级或独立出以下公共组件库：<br>
 https://github.com/we-digest/wxacomp-qtext<br>
 https://github.com/we-digest/qtext-parse<br>
@@ -180,14 +180,15 @@ https://www.stefanjudis.com/snippets/how-to-import-json-files-in-es-modules-node
   $ node index.mjs
 */
 // An import assertion in a static import
-import info from `./package.json` assert { type: `json` };
+import info from './package.json' assert { type: 'json' };
 // An import assertion in a dynamic import
 const { default: info } = await import("./package.json", {
   assert: {
     type: "json",
   },
 });
-with node >= 17.5  or --experimental-json-modules in Node.js 16.
+// with node --experimental-json-modules in lower node versions
+// At the time of writing, the current Node.js LTS (v18.12) still marks import assertions as experimental.
 
 // 2.
 import { readFile } from 'fs/promises';
@@ -378,7 +379,7 @@ https://github.com/fritx/vue-at/commit/f791135843068d6c77975923289e10cbf2009e5c#
 
 ---
 
-[0719] 油猴脚本：微信小程序发布 移除敏感信息多余自动补全
+[0719] 油猴：微信小程序发布 移除敏感信息多余自动补全
 
 ```js
 // ==UserScript==
@@ -390,19 +391,15 @@ https://github.com/fritx/vue-at/commit/f791135843068d6c77975923289e10cbf2009e5c#
 // @author      -
 // @description 7/19/2022, 1:08:32 PM
 // ==/UserScript==
-
 setInterval(() => {
   let $ = document.querySelector.bind(document)
-
   let inputs = [
     $('input[placeholder="请提供审核测试使用的测试账号"]'),
     $('input[placeholder="请填写测试账号的密码"]'),
   ]
-
   inputs.forEach(input => {
     if (input) input.value = ''
   })
-
 }, 2000)
 ```
 
