--- a/p/weekly/190814.md
+++ b/p/weekly/190814.md
@@ -7,7 +7,7 @@
 ---
 
 [0813] shell 目录下 筛选后缀名 替换字符串<br>
-注意mac 必须指定 -i 空也可以<br>
+注意mac 必须指定 -i '' 然后才是 's/xx/xx/g'<br>
 mac(gnu/bsd)坑 http://zhouxiaohong.com/2016/08/02/sed-in-mac/<br>
 url转义坑 https://stackoverflow.com/questions/14687725/trying-to-escape-a-for-sed-on-ubuntu<br>
 多name坑 https://unix.stackexchange.com/questions/102191/find-with-multiple-name-and-exec-executes-only-the-last-matches-of-nam
