--- a/p/weekly/220530.md
+++ b/p/weekly/220530.md
@@ -1,4 +1,4 @@
-# 亮爷Weekly 0530
+# 亮爷Weekly 220530
 
 ---
 
@@ -224,121 +224,46 @@ https://developers.weixin.qq.com/community/develop/doc/000644fd4683f034285a60191
 ---
 
 [0427] 微信小程序中引入lodash 报错 Cannot ready property 'prototype' of undefined<br>
-https://blog.csdn.net/hjiaqing/article/details/106212711
-
----
-
-[0420] TenPayV3 支付出现签名错误，会是什么问题造成的。<br>
-https://weixin.senparc.com/QA-3661<br>
-https://developers.weixin.qq.com/miniprogram/dev/api/payment/wx.requestPayment.html
-> 默认MD5，V3应该是RSA
-
-[0420] mac 系统升级后 进入目录时 命令行报错 env: python: No such file or directory<br>
-https://stackoverflow.com/questions/71468590/env-python-no-such-file-or-directory-when-building-app-with-xcode<br>
-最终解法：ln -s "$(brew --prefix)/bin/python"{3,}
-
-https://stackoverflow.com/questions/3655306/ubuntu-usr-bin-env-python-no-such-file-or-directory<br>
-提到的解法：sudo ln -s /usr/bin/python3 /usr/bin/python （提示 not permitted）
-
-[0420] 解决Parallels Desktop中文乱码问题<br>
-http://www.sandbarry.com/archives/1212<br>
-windows下，控制面板－区域和语言－管理－非unicode程序的语言－更改系统区域设置－简体中文
-
----
-
-[0419] 微信小程序 内容安全旧接口 openapi.security.imgSecCheck 返回<br>
-{"errCode":41005,"errMsg":"openapi.security.imgSecCheck:fail media data missing..."}<br>
-https://developers.weixin.qq.com/community/minihome/doc/000ace88ca4500dfb66a7afe35f400<br>
-临时解决方式：<br>
-  "wx-server-sdk": "latest" ->>  "wx-server-sdk": "<0.4.0"<br>
-长远解决方式：<br>
-升级内容安全接口为新版本接口
-
-[0419] mac系统升级后 命令行报错 ModuleNotFoundError: No module named 'thefuck'
-
-```sh
-Last login: Tue Apr 19 21:00:04 on console
-Traceback (most recent call last):
-  File "/usr/local/bin/thefuck", line 9, in <module>
-    from thefuck.entrypoints.main import main
-ModuleNotFoundError: No module named 'thefuck'
-```
-
-ImportError: No module named 'thefuck.entrypoints' #716
-https://github.com/nvbn/thefuck/issues/716<br>
-> Try to run sudo pip3 install -U thefuck
-
-[0419] 新版的微信开发者工具 一保存就弹出错误码 -10007<br>
-https://developers.weixin.qq.com/community/develop/doc/000c44d4020150d4f51af19f251800?_at=1594717991101
+https://blog.csdn.net/hjiaqing/article/details/106212711<br>
+https://github.com/we-calendar/weapp-calendar/blob/main/miniprogram/utils/lodash.js
 
 ```js
-// project.config.json
-"setting": {
-  "preloadBackgroundData": false,
-```
+// miniprogram/utils/lodash.js
+global.Object = Object
+global.Array = Array
+// global.Buffer = Buffer这个不能在微信里使用
+global.DataView = DataView
+global.Date = Date
+global.Error = Error
+global.Float32Array = Float32Array
+global.Float64Array = Float64Array
+global.Function = Function
+global.Int8Array = Int8Array
+global.Int16Array = Int16Array
+global.Int32Array = Int32Array
+global.Map = Map
+global.Math = Math
+global.Promise = Promise
+global.RegExp = RegExp
+global.Set = Set
+global.String = String
+global.Symbol = Symbol
+global.TypeError = TypeError
+global.Uint8Array = Uint8Array
+global.Uint8ClampedArray = Uint8ClampedArray
+global.Uint16Array = Uint16Array
+global.Uint32Array = Uint32Array
+global.WeakMap = WeakMap
+global.clearTimeout = clearTimeout
+global.isFinite = isFinite
+global.parseInt = parseInt
+global.setTimeout = setTimeout
 
----
+let throttle = require('lodash.throttle')
+let cloneDeep = require('lodash.clonedeep')
+let flattenDeep = require('lodash.flattendeep')
+// ...
 
-[0407] 腾讯云 成功通过acme.sh 在sudo下实现免费ssl
-
-```sh
-sudo systemctl stop nginx && \
-  sudo /home/ubuntu/.acme.sh/acme.sh --issue --force --standalone -d xxxxx.xxxxx.xxx && \
-  sudo systemctl start nginx
-```
-
----
-
-[0303] scp doesn't work but ssh does (6 Solutions!!)<br>
-https://superuser.com/questions/395356/scp-doesnt-work-but-ssh-does<br>
-https://www.youtube.com/watch?v=BEQbea85w9w
-
-```sh
-echo -e "[ -z "$PS1" ] && return\n$(cat ~/.bashrc)" > ~/.bashrc
-# or
-echo -e "[[ $- == *i* ]] || return\n$(cat ~/.bashrc)" > ~/.bashrc
-
-scp -r <user>@<host>:/<source> /<destination>  # directory
-scp <user>@<host>:/<source> /<destination>  # file
-```
-
-[0303] BASH Prepend A Text / Lines To a File<br>
-https://www.cyberciti.biz/faq/bash-prepend-text-lines-to-file/
-
-```sh
-echo 'line 1' > /tmp/newfile
-echo 'line 2' >> /tmp/newfile
-cat yourfile >> /tmp/newfile
-cp /tmp/newfile yourfile
-
-echo "text"|cat - yourfile > /tmp/out && mv /tmp/out yourfile
-echo "nixCraft"|cat - yourfile > /tmp/out && mv /tmp/out yourfile
-
-echo -e "DATA-Line-1\nDATA-Line-2\n$(cat input)" > input
-cat input
-
-sed  '1s;^;DATA-Line-1\n;' input > output
-## GNU/sed syntax ##
-sed -i '1s;^;DATA-Line-1\n;' input
-```
-
----
-
-[0301] How to create a type for complex JSON object in TypeScript?<br>
-https://dev.to/ankittanna/how-to-create-a-type-for-complex-json-object-in-typescript-d81
-
-Please provide a json basic type -- TypeScript#1897<br>
-https://github.com/microsoft/TypeScript/issues/1897
-
-Support object progress<br>
-https://github.com/s-r-x/bull-monitor/issues/14<br>
-https://github.com/s-r-x/bull-monitor/pull/51
-
-```ts
-type JSONValue =
-    | string
-    | number
-    | boolean
-    | { [x: string]: JSONValue }
-    | Array<JSONValue>;
+// export { ... }
+export { flattenDeep, cloneDeep, throttle }
 ```
