misc & markppt arbitrary+nodejs-talk

--- a/p/weekly/190126.md
+++ b/p/weekly/190126.md
@@ -114,7 +114,7 @@ const koaJson = koaMerge(koaBody, async (ctx, next) => {
     ctx.throw(400, new Error(`invalid content-type, got: ${contentType}`))
   }
   let { body } = ctx.request
-  mongoSanitizeRecursive(body)
+  mongoSanitizeRecursive(body) // mongo-sanitize
   ctx.request.body = body
   await next()
 })
